# infraestracture-on-demand

./: README.md
Projects/dynamic_experiments/: CMakeLists.txt  experiment copy.cpp  experiment.cpp  experiment_adhoc.cpp  experiment_copy_security.cpp  plotter.ipynb
Projects/dynamic_experiments/data/10TA5NA/experiment_0/: NA_positions.txt  TA_positions.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_1/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_2/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_3/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_4/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_5/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_6/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_7/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_8/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/10TA5NA/experiment_9/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/15TA10NA/experiment_0/: NA_positions.txt  TA_positions.txt  performance.txt
Projects/dynamic_experiments/data/15TA10NA/experiment_1/: NA_positions.txt  TA_positions.txt  performance.txt
(+4339 files in other folders)
